--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "test",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "app.js",
   "scripts": {
+    "start":"node ./bin/www",
+    "deploy":"gcloud ml app deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
