--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start":"node ./bin/www",
+    "start":"node src/app.js",
     "deploy":"gcloud ml app deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
