--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start":"node src/app.js",
-    "deploy":"gcloud ml app deploy",
+    "start": "node src/app.js",
+    "deploy": "gcloud ml app deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1"
